src/App.css
body, body[data-theme="dark"] {
  --accent: #6a19d5;
  --accent2: #c0c0c0;

  --background-color: RGB(20, 20, 20);
  --text-color: white;
  --secondary-text-color: var(--accent2);
  --logo-default: var(--accent2);
  --logo-hover: white;

  --button-text: var(--accent2);
  --button-border: var(--accent2);

  --generic-button-border: var(--accent);

  --generic-radio-border: var(--accent);
  --generic-radio-fill: var(--accent);

  --icon-button: var(--accent2);
  --icon-button-hover: white;

  --home-button: var(--accent2);

  --link-text: #53a5e0;
  --link-hover: #6dc1fc;

  --divider: var(--accent2);

  --textbox-border: var(--accent2);

  --drawer-background-color: RGB(25, 25, 25);
  --drawer-text-color: var(--text-color);
  --drawer-item-background: var(--drawer-background-color);
  --drawer-item-border: var(--accent);
}


body {
  background-color: var(--background-color);
  color: var(--text-color);
}

.page {
  width: 100vw;
  max-width: 100vw;
  justify-self: center;
}

@media (min-aspect-ratio: 1/1) {
  .page {
    width: 70vw; /* width for computers */
    max-width: 70vw;
  }
}

.glyph, .glyph input {
  font-family: "Major Mono Display", serif;
  font-weight: 400;
  font-style: normal;
}

.geometric, .geometric input {
  font-family: "Outfit", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.exo, .exo input {
  font-family: "Exo 2", serif;
  font-optical-sizing: auto;
  font-weight: 200;
  font-style: normal;
}

.secondary {
  color: var(--secondary-text-color);
}

.main-content {
  height: 78vh;
  max-height: 80vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#github-link, #linkedin, #email {
  color: var(--logo-default);
  transition: 150ms;
}

#github-link:hover, #linkedin:hover, #email:hover, .home-button:hover {
  color: var(--logo-hover) !important;
  transform: scale(110%);
}

.buttonBackground {
  background-color: var(--background-color);
  color: var(--button-text);
  text-decoration: none;
  border-color: var(--button-border);

  transition: border 150ms;
}

.buttonBackground:hover {
  border: transparent;
}

.generic-button {
  background-color: transparent;
  color: var(--text-color);
  border: 2px solid var(--generic-button-border);
  border-radius: 0.5rem;
  transition: background-color 0.2s;
}

.generic-button:hover {
  background-color: var(--generic-button-border);
}

.generic-radio {
  opacity: 0;
}

.generic-radio-overlay {
  position: relative;
  border: 2px solid var(--generic-radio-border);
  border-radius: 50%;

  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 0.2s;
}

.generic-radio-overlay .generic-radio-check {
  opacity: 0;
}

.generic-radio-overlay:hover {
  background-color: var(--generic-radio-border);
}

.generic-radio-container input:checked ~ .generic-radio-overlay .generic-radio-check {
  opacity: 1;
}

.generic-icon-button {
  color: var(--icon-button) !important;
  transition: 150ms !important;
}

.generic-icon-button:hover {
  color: var(--icon-button-hover);
  transform: scale(110%);
}

.home-button {
  color: var(--home-button) !important;
  transition: 150ms !important;
}

.no-link-styling, .no-link-styling:visited {
  text-decoration: inherit;
  color: inherit;
}

.link {
  color: var(--link-text) !important;
  transition: 150ms;
}

.link:hover {
  color: var(--link-hover) !important;
}

.divider {
  background-color: var(--divider);
}

.textfield input {
  color: var(--text-color)
}

.textfield .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
  border-color: var(--textbox-border) !important;
}

.chip .MuiChip-label {
  color: var(--text-color);
}

.pointer {
  cursor: pointer;
}

.no-highlight {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                    supported by Chrome, Edge, Opera and Firefox */
}

#projects-menu {
  background-color: var(--drawer-background-color);
  color: var(--drawer-text-color);
}

.projects-menu-link {
  background-color: var(--drawer-item-background);
  color: var(--drawer-text-color);
  border: 2px solid var(--drawer-item-border);
  transition: 150ms;
}

.projects-menu-link:hover {
  background-color: var(--drawer-item-border);
}

